# Access-WebInterface

./: .gitignore  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  api.ts  format.ts  index.css  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/tests/: db_test.rs
src/components/: ConfirmDialog.tsx  Dashboard.tsx  DataGrid.tsx  DetailPanel.tsx  FilterBar.tsx  LockBanner.tsx  RowForm.tsx  Sidebar.tsx  StatsPanel.tsx  Toasts.tsx
