[package]
name = "accessdb"
version = "0.1.0"
description = "Access DB Browser - manage and browse Microsoft Access databases"
authors = ["Jeremy"]
edition = "2021"

[lib]
name = "accessdb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
odbc-api = "28"
encoding_rs = "0.8"

[profile.release]
# Smaller, faster-to-produce release binaries
opt-level = "s"
lto = true
codegen-units = 1
strip = true
